--- a/index.html
+++ b/index.html
@@ -36,15 +36,14 @@
         flex-flow: column;
         align-items: center;
         justify-content: center;
-        background-color: hsl(300, 24%, 96%);
-        border: 1px solid hsl(303, 10%, 53%);
+        /* background-color: hsl(300, 24%, 96%); */
         height: 100vh;
         font-size: 15px;
         font-family: "Spartan", sans-serif;
       }
 
       .container {
-        background-color: hsl(300, 24%, 96%);
+        /* background-color: hsl(300, 24%, 96%); */
         color: hsl(0, 0%, 100%);
         border: 2px dotted orange;
       }
@@ -56,14 +55,14 @@
       }
 
       .card-main {
-        width: 380px;
+        width: 450px;
         border: 1px solid blue;
         margin: 10px;
       }
 
       .card-main > h1 {
         color: hsl(300, 43%, 22%);
-        font-weight: 700;
+        font-size:50px;
       }
 
       .card-main > p {
@@ -71,19 +70,38 @@
       }
 
       .card-stars {
-        width: 380px;
+        width: 40%;
+        color: hsl(300, 43%, 22%);
         display: flex;
-        flex-direction: row;
-        justify-content: center;
-        margin-top: 10px;
-        border: 1px solid red;
+        flex-flow: column;
+        justify-content: start;
+        align-items: center;
+        margin: 10px;
+        padding: 20px;
+        border: 1px solid hsl(303, 10%, 53%);
       }
 
-      .card-stars li {
+      .card-stars p {
         list-style-type: none;
-        margin-top: 10px;
+        margin: 5px;
+        padding: 15px;
+        padding-right: 40px;
+        border-radius: 10px;
         border: 1px solid red;
-        background-color: hsl(333, 80%, 67%);
+        background-color: hsl(300, 24%, 96%);
+        font-weight: bold;
+      }
+
+      p:nth-child(1) {
+        align-self: flex-start;
+      }
+
+      p:nth-child(2) {
+        align-self: center;
+      }
+
+      p:nth-child(3) {
+        align-self: end;
       }
 
       .card-bottom {
@@ -93,14 +111,56 @@
         border: 1px solid blue;
       }
 
+      .review-profile {
+        border: 1px solid green;
+        display: grid;
+        grid-template-columns: 0.8fr 2fr;
+        grid-template-rows: auto;
+        place-items: start;
+      }
+
+      .review-profile > p {
+        align-self: flex-start;
+        margin-top: 0;
+        margin-left: 2px;
+        color: hsl(333, 80%, 67%);
+      }
+
+      .review-profile > h4 {
+        margin-top: 10px;
+        margin-bottom: 2px !important;
+      }
+
+      .review img {
+        width: 50px;
+        border-radius: 50px;
+        grid-column-start: 1;
+        grid-column-end: 2;
+        grid-row-start: 1;
+        grid-row-end: 3;
+      }
+
       .review {
-        width: 270px;
+        width: 300px;
         margin-top: 10px;
         background-color: hsl(300, 43%, 22%);
         border: 1px solid white;
         border-radius: 10px;
         padding: 30px;
-        margin: 10px;
+        margin: 15px;
+      }
+
+      #start {
+        align-self: start;
+        margin-bottom: 50px;
+      }
+
+      #middle {
+        align-self: center;
+      }
+
+      #end {
+        align-self: end;
       }
     </style>
   </head>
@@ -118,36 +178,64 @@
         </div>
 
         <div class="card-stars">
-          <ul>
-            <li>Rated 5 Stars in Reviews</li>
-            <li>Rated 5 Stars in Report Guru</li>
-            <li>Rated 5 Stars in BestTech</li>
-          </ul>
+          <p>
+            <img src="/images/icon-star.svg" alt="star icon" />
+            <img src="/images/icon-star.svg" alt="star icon" />
+            <img src="/images/icon-star.svg" alt="star icon" />
+            <img src="/images/icon-star.svg" alt="star icon" />
+            <img src="/images/icon-star.svg" alt="star icon" />
+            Rated 5 Stars in Reviews
+          </p>
+          <p>
+            <img src="/images/icon-star.svg" alt="star icon" />
+            <img src="/images/icon-star.svg" alt="star icon" />
+            <img src="/images/icon-star.svg" alt="star icon" />
+            <img src="/images/icon-star.svg" alt="star icon" />
+            <img src="/images/icon-star.svg" alt="star icon" />
+            Rated 5 Stars in Report Guru
+          </p>
+          <p>
+            <img src="/images/icon-star.svg" alt="star icon" />
+            <img src="/images/icon-star.svg" alt="star icon" />
+            <img src="/images/icon-star.svg" alt="star icon" />
+            <img src="/images/icon-star.svg" alt="star icon" />
+            <img src="/images/icon-star.svg" alt="star icon" />
+            Rated 5 Stars in BestTech
+          </p>
         </div>
       </div>
 
       <div class="card-bottom">
-        <div class="review">
-          <h3>Colton Smith</h3>
-          <p>Verified Buyer</p>
+        <div class="review" id="start">
+          <div class="review-profile">
+            <img src="images/image-colton.jpg" alt="Image of Colton Smith" />
+            <h4>Colton Smith</h4>
+            <p>Verified Buyer</p>
+          </div>
           <p>
             "We needed the same printed design as the one we had ordered a week
             prior. Not only did they find the original order, but we also
             received it in time. Excellent!"
           </p>
         </div>
-        <div class="review">
-          <h3>Irene Roberts Verified Buyer</h3>
-          <p>Verified Buyer</p>
+        <div class="review" id="middle">
+          <div class="review-profile">
+            <img src="images/image-irene.jpg" alt="Image of Irene Roberts" />
+            <h4>Irene Roberts</h4>
+            <p>Verified Buyer</p>
+          </div>
           <p>
             "Customer service is always excellent and very quick turn around.
             Completely delighted with the simplicity of the purchase and the
             speed of delivery."
           </p>
         </div>
-        <div class="review">
-          <h3>Anne Wallace Verified Buyer</h3>
-          <p>Verified Buyer</p>
+        <div class="review" id="end">
+          <div class="review-profile">
+            <img src="images/image-anne.jpg" alt="Image of Anne Wallace" />
+            <h4>Anne Wallace</h4>
+            <p>Verified Buyer</p>
+          </div>
           <p>
             "Put an order with this company and can only praise them for the
             very high standard. Will definitely use them again and recommend
