--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;800&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Spartan:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
     <link
@@ -18,154 +18,28 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link rel="stylesheet" href="styles/styles.css" />
 
     <title>Frontend Mentor | Social proof section</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
     <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
+      .background {
+        aspect-ratio: 960/300;
+        width: 100%;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
       }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
+      .layer1 {
+        background-image: url("images/bg-pattern-top-desktop.svg");
       }
-
-      body {
-        display: flex;
-        flex-flow: column;
-        align-items: center;
-        justify-content: center;
-        /* background-color: hsl(300, 24%, 96%); */
-        height: 100vh;
-        font-size: 15px;
-        font-family: "Spartan", sans-serif;
-      }
-
-      .container {
-        /* background-color: hsl(300, 24%, 96%); */
-        color: hsl(0, 0%, 100%);
-        border: 2px dotted orange;
-      }
-
-      .card-top {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-      }
-
-      .card-main {
-        width: 450px;
-        border: 1px solid blue;
-        margin: 10px;
-      }
-
-      .card-main > h1 {
-        color: hsl(300, 43%, 22%);
-        font-size:50px;
-      }
-
-      .card-main > p {
-        color: hsl(303, 10%, 53%);
-      }
-
-      .card-stars {
-        width: 40%;
-        color: hsl(300, 43%, 22%);
-        display: flex;
-        flex-flow: column;
-        justify-content: start;
-        align-items: center;
-        margin: 10px;
-        padding: 20px;
-        border: 1px solid hsl(303, 10%, 53%);
-      }
-
-      .card-stars p {
-        list-style-type: none;
-        margin: 5px;
-        padding: 15px;
-        padding-right: 40px;
-        border-radius: 10px;
-        border: 1px solid red;
-        background-color: hsl(300, 24%, 96%);
-        font-weight: bold;
-      }
-
-      p:nth-child(1) {
-        align-self: flex-start;
-      }
-
-      p:nth-child(2) {
-        align-self: center;
-      }
-
-      p:nth-child(3) {
-        align-self: end;
-      }
-
-      .card-bottom {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        border: 1px solid blue;
-      }
-
-      .review-profile {
-        border: 1px solid green;
-        display: grid;
-        grid-template-columns: 0.8fr 2fr;
-        grid-template-rows: auto;
-        place-items: start;
-      }
-
-      .review-profile > p {
-        align-self: flex-start;
-        margin-top: 0;
-        margin-left: 2px;
-        color: hsl(333, 80%, 67%);
-      }
-
-      .review-profile > h4 {
-        margin-top: 10px;
-        margin-bottom: 2px !important;
-      }
-
-      .review img {
-        width: 50px;
-        border-radius: 50px;
-        grid-column-start: 1;
-        grid-column-end: 2;
-        grid-row-start: 1;
-        grid-row-end: 3;
-      }
-
-      .review {
-        width: 300px;
-        margin-top: 10px;
-        background-color: hsl(300, 43%, 22%);
-        border: 1px solid white;
-        border-radius: 10px;
-        padding: 30px;
-        margin: 15px;
-      }
-
-      #start {
-        align-self: start;
-        margin-bottom: 50px;
-      }
-
-      #middle {
-        align-self: center;
-      }
-
-      #end {
-        align-self: end;
+      .layer2 {
+        background-image: url("images/bg-pattern-bottom-desktop.svg");
       }
     </style>
   </head>
-  <body>
-    <main class="container">
+  <body ">
+    <main class="container ">
       <div class="card-top">
         <div class="card-main">
           <h1>10,000+ of our users love our products.</h1>
@@ -184,6 +58,7 @@
             <img src="/images/icon-star.svg" alt="star icon" />
             <img src="/images/icon-star.svg" alt="star icon" />
             <img src="/images/icon-star.svg" alt="star icon" />
+
             Rated 5 Stars in Reviews
           </p>
           <p>
