fixed body error

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <title>Frontend Mentor | Social proof section</title>
   </head>
 
-  <body ">
+  <body>
     <main class="container ">
       <div class="card-top">
         <div class="card-main">
