--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
     <title>Frontend Mentor | Social proof section</title>
   </head>
 
-  <body>
-    <main class="container ">
+<body>
+  <div class="layer1"></div>
+     <main class="container ">
       <div class="card-top">
         <div class="card-main">
           <h1>10,000+ of our users love our products.</h1>
@@ -103,7 +104,9 @@
           </p>
         </div>
       </div>
+
     </main>
+    <div class="layer2"></div>
     <!-- <footer>
       <div class="attribution">
         Challenge by
