fix images by absolute path

--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@
             <img src="/images/icon-star.svg" alt="star icon" />
             <img src="/images/icon-star.svg" alt="star icon" />
             <img src="/images/icon-star.svg" alt="star icon" />
-            <img src="/images/icon-star.svg" alt="star icon" />
+            <img src="./images/icon-star.svg" alt="star icon" />
             Rated 5 Stars in Report Guru
           </p>
           
           <p>
-            <img src="/images/icon-star.svg" />
-            <img src="/images/icon-star.svg" />
-            <img src="/images/icon-star.svg" />
-            <img src="/images/icon-star.svg" />
-            <img src="/images/icon-star.svg" />
+            <img src="./images/icon-star.svg" />
+            <img src="./images/icon-star.svg" />
+            <img src="./images/icon-star.svg" />
+            <img src="./images/icon-star.svg" />
+            <img src="./images/icon-star.svg" />
             Rated 5 Stars in BestTech
           </p>
         </div>
