icon fix attempt3

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
           </p>
           
           <p>
-            <img src="./images/icon-star.svg" />
-            <img src="./images/icon-star.svg" />
-            <img src="./images/icon-star.svg" />
-            <img src="./images/icon-star.svg" />
-            <img src="./images/icon-star.svg" />
+            <img src="images/icon-star.svg" />
+            <img src="images/icon-star.svg" />
+            <img src="images/icon-star.svg" />
+            <img src="images/icon-star.svg" />
+            <img src="images/icon-star.svg" />
             Rated 5 Stars in BestTech
           </p>
         </div>
