--- a/index.html
+++ b/index.html
@@ -37,30 +37,30 @@
 
         <div class="card-stars">
           <p>
-            <img src="/images/icon-star.svg" alt="star icon" />
-            <img src="/images/icon-star.svg" alt="star icon" />
-            <img src="/images/icon-star.svg" alt="star icon" />
-            <img src="/images/icon-star.svg" alt="star icon" />
-            <img src="/images/icon-star.svg" alt="star icon" />
+            <img src="images/icon-star.svg" alt="star icon" />
+            <img src="images/icon-star.svg" alt="star icon" />
+            <img src="images/icon-star.svg" alt="star icon" />
+            <img src="images/icon-star.svg" alt="star icon" />
+            <img src="images/icon-star.svg" alt="star icon" />
 
             Rated 5 Stars in Reviews
           </p>
 
           <p>
-            <img src="/images/icon-star.svg" alt="star icon" />
-            <img src="/images/icon-star.svg" alt="star icon" />
-            <img src="/images/icon-star.svg" alt="star icon" />
-            <img src="/images/icon-star.svg" alt="star icon" />
-            <img src="./images/icon-star.svg" alt="star icon" />
+            <img src="images/icon-star.svg" alt="star icon" />
+            <img src="images/icon-star.svg" alt="star icon" />
+            <img src="images/icon-star.svg" alt="star icon" />
+            <img src="images/icon-star.svg" alt="star icon" />
+            <img src="images/icon-star.svg" alt="star icon" />
             Rated 5 Stars in Report Guru
           </p>
           
           <p>
-            <img src="images/icon-star.svg" />
-            <img src="images/icon-star.svg" />
-            <img src="images/icon-star.svg" />
-            <img src="images/icon-star.svg" />
-            <img src="images/icon-star.svg" />
+            <img src="images/icon-star.svg" alt="star icon" />
+            <img src="images/icon-star.svg" alt="star icon"/>
+            <img src="images/icon-star.svg" alt="star icon"/>
+            <img src="images/icon-star.svg" alt="star icon"/>
+            <img src="images/icon-star.svg" alt="star icon"/>
             Rated 5 Stars in BestTech
           </p>
         </div>
